rust_writer_procedural/tests/ui/mutator_fails_if_attr_not_separated_by_commas.stderr
error: expected `,`
 --> tests/ui/mutator_fails_if_attr_not_separated_by_commas.rs:5:58
  |
5 | #[mutator(rust_writer::ast::implementors::ItemToTrait<'a>; local = A)]
  |                                                          ^
